[package]
name = "pico-pwm-irq-crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = { git = "https://github.com/rp-rs/rp-hal.git", branch="main" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-time = "0.12"
panic-halt= "0.2"
embedded-hal ="0.2"
